--- a/github project/01-front-basic-github/index.html
+++ b/github project/01-front-basic-github/index.html
@@ -39,7 +39,7 @@
 
 
   <!-- 2)reset.css 초기화 : 브라우저가 가진 여백을포함한 기본스타일 및 .css파일의 기존스타일들을 없에고 초기화-->
-  <link rel="stylesheet" href="css/reset.css"> --> -->
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"> 
 
   <!-- 1) https://fonts.google.com/ 구글폰트 홈피를 사용한 link 와 css 속성 연결후 hello world 를 body안에 넣어 폰트체크--> 
@@ -52,22 +52,24 @@
     <!--BEM : css 작명규칙
       1. a__b a의 일부분인 b라는 의미 (언더바 2개)
       2. c--d c의 상태는 d라는 의미 (대쉬를 2번) -->
+    <header class="section">
+      <div class="inner">  
+        <!-- 헤더의 좌측메뉴 -->
+        <div class="menu-group">
 
+          <div class="logo"><a href="#">Github</a></div>
+          <ul class="main-menu">
+            <li><a href="#">Personal </a></li>
+            <li><a href="#">Open Source</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">Explore</a></li>
+          </ul>
+
+        </div>
+      </div>
+    </header>
 
   </div>
-
-  <div class="btn">Basic button</div>
-  <div class="btn btn--primary">Primary button</div>
-  <div class="btn">Button1</div>
-  <div class="btn btn--primary">Button3</div>
-  <input type="text" class="input--text" placeholder="Search GitHub">
-  
-  
-
-
-
-
-
 
 </body>
 </html>
