--- a/03-front-basic-github/index.html
+++ b/03-front-basic-github/index.html
@@ -45,6 +45,9 @@
   <!-- 1) https://fonts.google.com/ 구글폰트 홈피를 사용한 link 와 css 속성 연결후 hello world 를 body안에 넣어 폰트체크--> 
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css"> 
+  <!-- js 링크를 body태그에 넣게되면 html의 코드가 먼저 돌아가기전에 script가 돌아감 -->
+  <!-- defer는 순서를 따르되 js가 잘 돌아가게함 -->
+  <script defer src="js/main.js"></script>
 
 </head>
 <body>
@@ -91,6 +94,9 @@
               <li><a href="#">Support</a></li>
             </ul>
           </div>
+
+          <div id="toggle-btn">Header Menu Toggle Button</div>
+          <!-- Header Menu Toggle Button ? 사라지게? -->
 
         </div>
       </header>
@@ -204,6 +210,41 @@
     
         </div>
       </section>
+
+      <!-- FOOTER -->
+      <footer class="section">
+        <div class="inner">
+          <ul class="site-links float--right">
+            <li><a href="#">Content github</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Training</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#"></a></li>
+          </ul>
+          <ul class="site-links float--left">
+            <li>@ 2016 Github, Inc.</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Pricacy</a></li>
+            <li><a href="#">Security</a></li>
+            <li><a href="#">Status</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#"></a></li>
+          </ul>
+
+          <a class="logo" href="#"><svg version="1.1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="24"
+            height="24"
+            viewBox="0 0 16 16"
+            fill="#ccc">
+           <path fill-rule="evenodd"
+                 d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+          </svg>
+          </a>
+        </div>        
+      </footer>    
 
     </div>
 
